@@ -2,8 +2,6 @@
 # Copyright 2017, 2018, Oracle Corporation and/or its affiliates.  All rights reserved.
 # Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
 
-set -x
-
 export PATH=$PATH:/operator
 
 echo "Launching Oracle WebLogic Server Kubernetes Operator..."
@@ -50,7 +48,7 @@ if [[ ! -z "$JAVA_LOGGING_LEVEL" ]]; then
      [ $JAVA_LOGGING_LEVEL != $FINEST  ]; then
     echo "WARNING: Ignoring invalid JAVA_LOGGING_LEVEL: \"${JAVA_LOGGING_LEVEL}\". Valid values are $SEVERE, $WARNING, $INFO, $CONFIG, $FINE, $FINER and $FINEST."
   else
-    sed -i -e "s|\(.*\.level=\).*|\1${JAVA_LOGGING_LEVEL}|g" $LOGGING_CONFIG
+    sed -i -e "s|INFO|${JAVA_LOGGING_LEVEL}|g" $LOGGING_CONFIG
   fi
 fi
 
@@ -64,7 +62,10 @@ cp /operator/logstash.conf /logs/logstash.conf
 # assumption is that we have mounted a volume on /logs which is also visible to
 # the logstash container/pod.
 
+# Container memory optimizaton flags
+HEAP="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
+
 # Start operator
-java $MOCKING_WLS $DEBUG $LOGGING -jar /operator/weblogic-kubernetes-operator.jar &
+java $HEAP $MOCKING_WLS $DEBUG $LOGGING -jar /operator/weblogic-kubernetes-operator.jar &
 PID=$!
 wait $PID
